Add manual shard

--- a/Introduction_to_sharded_computation.ipynb
+++ b/Introduction_to_sharded_computation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "V28",
-      "authorship_tag": "ABX9TyP3spA8ozy0avRUMzMjdHdO",
+      "authorship_tag": "ABX9TyNAPx+mP5IoSRKxLp+KCZZe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -344,10 +344,10 @@
       ],
       "metadata": {
         "id": "FhXz59z6Gopp",
-        "outputId": "ee4d429a-3532-4d59-aef2-5dc67a3e775b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ee4d429a-3532-4d59-aef2-5dc67a3e775b"
       },
       "execution_count": 22,
       "outputs": [
@@ -372,12 +372,12 @@
         "print(result)"
       ],
       "metadata": {
-        "id": "6ot2WLFzXLSB",
-        "outputId": "0dee4146-953e-41d7-c7bc-7b6114b9efd9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        }
+        },
+        "id": "6ot2WLFzXLSB",
+        "outputId": "0dee4146-953e-41d7-c7bc-7b6114b9efd9"
       },
       "execution_count": 23,
       "outputs": [
@@ -440,12 +440,12 @@
         "print(result)"
       ],
       "metadata": {
-        "id": "wdAwtSjEXQPt",
-        "outputId": "9602e254-835d-4097-8dc2-0cbdf5375fb9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        }
+        },
+        "id": "wdAwtSjEXQPt",
+        "outputId": "9602e254-835d-4097-8dc2-0cbdf5375fb9"
       },
       "execution_count": 24,
       "outputs": [
@@ -508,11 +508,11 @@
         "f_elementwise_sharded(arr)"
       ],
       "metadata": {
-        "id": "nxey6dq7bh0l",
-        "outputId": "d51f582b-2de6-4c44-e238-15824e83f8c7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nxey6dq7bh0l",
+        "outputId": "d51f582b-2de6-4c44-e238-15824e83f8c7"
       },
       "execution_count": 26,
       "outputs": [
@@ -556,11 +556,11 @@
         "y = shard_map(f, mesh=mesh, in_specs=P('x'), out_specs=P('x'))(x)"
       ],
       "metadata": {
-        "id": "EHWHXJBSavvb",
-        "outputId": "95741358-7bc9-41a4-acaf-76b63f15b24d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EHWHXJBSavvb",
+        "outputId": "95741358-7bc9-41a4-acaf-76b63f15b24d"
       },
       "execution_count": 27,
       "outputs": [
@@ -575,10 +575,107 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Because each of the functions only \"sees\" the device-local part of the data, it means that aggregation like functions require some extra thought."
+      ],
+      "metadata": {
+        "id": "wlrHUcfunJyB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For example, here's what a `shard_map` of a `jax.numpy.sum()`"
+      ],
+      "metadata": {
+        "id": "hZlbJ6OrnYVe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def f(x):\n",
+        "  return jnp.sum(x, keepdims=True)\n",
+        "\n",
+        "shard_map(f, mesh=mesh, in_specs=P('x'), out_specs=P('x'))(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "65bFfb6dlHKg",
+        "outputId": "f5a2096d-2b44-4c3d-8cd3-540a404d6056"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Array([  6,  22,  38,  54,  70,  86, 102, 118], dtype=int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The function `f` operates separately on each shard, and the resulting summation shape reflects this.\n",
+        "\n",
+        "If you want to sum across shards, you need to use collective operations like `jax.lax.psum()`"
+      ],
+      "metadata": {
+        "id": "RLFYgQnSp94x"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def f(x):\n",
+        "  sum_in_shard = x.sum()\n",
+        "  return jax.lax.psum(sum_in_shard, 'x')\n",
+        "\n",
+        "shard_map(f, mesh=mesh, in_specs=P('x'), out_specs=P())(x)"
+      ],
+      "metadata": {
+        "id": "Ig1024EDnrnF",
+        "outputId": "9b876bf3-6f10-4e76-d332-e54c7ed06a90",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Array(496, dtype=int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Because the output no longer has a sharded dimension, set `out_specs=P()`"
+      ],
+      "metadata": {
+        "id": "phFJQiYeqx5v"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "65bFfb6dlHKg"
+        "id": "BHVjs5aCqjEg"
       },
       "execution_count": null,
       "outputs": []
