three diff automatic sharding added.

--- a/Introduction_to_sharded_computation.ipynb
+++ b/Introduction_to_sharded_computation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "V28",
-      "authorship_tag": "ABX9TyNAPx+mP5IoSRKxLp+KCZZe",
+      "authorship_tag": "ABX9TyNx6+XUL7w1ZhASk8uPjH3o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "I5fMXXf3Pyvf"
       },
-      "execution_count": 15,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -60,9 +60,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oV-xUCPbCJ0F",
-        "outputId": "da9b32a3-a2bb-435e-b8e0-baf83029406c"
+        "outputId": "8fad7244-6123-4f1e-f505-7b76a4f293ee"
       },
-      "execution_count": 16,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -79,7 +79,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 39
         }
       ]
     },
@@ -116,9 +116,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pu_hzbiFCMXu",
-        "outputId": "f4558d83-d23c-49d5-83a0-ef6f1eea5602"
+        "outputId": "f7c64952-02fb-46e6-8b72-a5b707be3b27"
       },
-      "execution_count": 17,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -128,7 +128,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 40
         }
       ]
     },
@@ -142,9 +142,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2SmzAHiIDhZe",
-        "outputId": "ab63bbe1-8e4c-4977-e159-026711edcbef"
+        "outputId": "983b5047-1790-4f6c-cf90-1526c260cb5c"
       },
-      "execution_count": 18,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,7 +154,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 41
         }
       ]
     },
@@ -169,9 +169,9 @@
           "height": 199
         },
         "id": "jNrvsNsVDjO2",
-        "outputId": "bc8c120a-efa3-472a-c3e9-a76b3dbc3af6"
+        "outputId": "34cadf4e-4850-47db-efb5-98b24234ee28"
       },
-      "execution_count": 19,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "display_data",
@@ -235,9 +235,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "20XK21GjDnWr",
-        "outputId": "f4541544-b3db-4978-83aa-4f3ee41b87fe"
+        "outputId": "4f08f2d0-4c04-4cbf-e048-3b760b9fca15"
       },
-      "execution_count": 20,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,9 +262,9 @@
           "height": 286
         },
         "id": "azvqCLteEnry",
-        "outputId": "f4717d6f-e167-4c91-bf37-92c3cdc13edb"
+        "outputId": "c4945ba4-8515-4c8b-9f60-71939d7cc6a7"
       },
-      "execution_count": 21,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,9 +347,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ee4d429a-3532-4d59-aef2-5dc67a3e775b"
+        "outputId": "b5e45b41-e69d-41a4-8308-0180e8d44217"
       },
-      "execution_count": 22,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,9 +377,9 @@
           "height": 68
         },
         "id": "6ot2WLFzXLSB",
-        "outputId": "0dee4146-953e-41d7-c7bc-7b6114b9efd9"
+        "outputId": "b4371a8e-5773-4e62-9645-48440b425b87"
       },
-      "execution_count": 23,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "display_data",
@@ -445,9 +445,9 @@
           "height": 68
         },
         "id": "wdAwtSjEXQPt",
-        "outputId": "9602e254-835d-4097-8dc2-0cbdf5375fb9"
+        "outputId": "335e792e-0c7d-4ae2-91e9-c04824f41474"
       },
-      "execution_count": 24,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "display_data",
@@ -512,9 +512,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nxey6dq7bh0l",
-        "outputId": "d51f582b-2de6-4c44-e238-15824e83f8c7"
+        "outputId": "458badbf-6677-43d0-a834-050775ad7452"
       },
-      "execution_count": 26,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -530,7 +530,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 48
         }
       ]
     },
@@ -560,9 +560,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EHWHXJBSavvb",
-        "outputId": "95741358-7bc9-41a4-acaf-76b63f15b24d"
+        "outputId": "2178c157-1c1e-4586-9159-5696a66b35fd"
       },
-      "execution_count": 27,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,9 +605,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "65bFfb6dlHKg",
-        "outputId": "f5a2096d-2b44-4c3d-8cd3-540a404d6056"
+        "outputId": "d6f0bbf1-abe9-40a8-827e-402a801405f9"
       },
-      "execution_count": 29,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -617,7 +617,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 50
         }
       ]
     },
@@ -642,13 +642,13 @@
         "shard_map(f, mesh=mesh, in_specs=P('x'), out_specs=P())(x)"
       ],
       "metadata": {
-        "id": "Ig1024EDnrnF",
-        "outputId": "9b876bf3-6f10-4e76-d332-e54c7ed06a90",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ig1024EDnrnF",
+        "outputId": "6de4287f-9f90-451f-e43a-ae32514a54d5"
       },
-      "execution_count": 35,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -658,7 +658,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 51
         }
       ]
     },
@@ -672,10 +672,195 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Comparing the three approaches"
+      ],
+      "metadata": {
+        "id": "REPw8gN_rLSU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "@jax.jit\n",
+        "def layer(x, weights, bias):\n",
+        "  return jax.nn.sigmoid(x @ weights + bias)"
+      ],
+      "metadata": {
+        "id": "BHVjs5aCqjEg"
+      },
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "rng = np.random.default_rng(0)\n",
+        "\n",
+        "x = rng.normal(size=(32,))\n",
+        "weights = rng.normal(size=(32, 4))\n",
+        "bias = rng.normal(size=(4,))\n",
+        "\n",
+        "layer(x, weights, bias)"
+      ],
+      "metadata": {
+        "id": "_5CcaFqcrWxK",
+        "outputId": "d81d1e7c-76e6-4d27-9979-e1d35d83d384",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Array([0.02138916, 0.8931118 , 0.5989196 , 0.9774251 ], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Automatic sharding\n",
+        "\n",
+        "If you shard the leading axis of both `x` and `weights` in the same way, then the matrix multiplication will automatically happen in parallel:"
+      ],
+      "metadata": {
+        "id": "kCuG2cDGuJhS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "P = jax.sharding.PartitionSpec\n",
+        "mesh = jax.sharding.Mesh(jax.devices(), 'x')\n",
+        "sharding = jax.sharding.NamedSharding(mesh, P('x'))\n",
+        "\n",
+        "x_sharded = jax.device_put(x, sharding)\n",
+        "weights_sharded = jax.device_put(weights, sharding)\n",
+        "\n",
+        "layer(x_sharded, weights_sharded, bias)"
+      ],
+      "metadata": {
+        "id": "h_ZyY5qmtmJP",
+        "outputId": "c1308f12-21f4-4cd2-c59d-1e11130dfcb0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Array([0.02138916, 0.8931118 , 0.5989196 , 0.9774251 ], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Alternatively, you can use `jax.lax.with_sharding_constraint()` in the function to automatically distribute unsharded inputs:"
+      ],
+      "metadata": {
+        "id": "_Q7SLXU8vLr6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "@jax.jit\n",
+        "def layer_auto(x, weights, bias):\n",
+        "  x = jax.lax.with_sharding_constraint(x, sharding)\n",
+        "  weights = jax.lax.with_sharding_constraint(weights, sharding)\n",
+        "  return layer(x, weights, bias)\n",
+        "\n",
+        "layer_auto(x, weights, bias)"
+      ],
+      "metadata": {
+        "id": "voMri9uvurjt",
+        "outputId": "b8c71d8b-7ad8-4b71-9134-888b004091fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Array([0.02138916, 0.8931118 , 0.5989196 , 0.9774251 ], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Fianlly, you can do the same thing with `shard_map`, using `jax.lax.psum()` to indicate the cross-shard collective required for the matrix product."
+      ],
+      "metadata": {
+        "id": "qVuONi2WwraP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from functools import partial\n",
+        "\n",
+        "@jax.jit\n",
+        "@partial(shard_map, mesh=mesh,\n",
+        "         in_specs=(P('x'), P('x', None), P(None)),\n",
+        "         out_specs=P(None))\n",
+        "\n",
+        "def layer_sharded(x, weights, bias):\n",
+        "  return jax.nn.sigmoid(jax.lax.psum(x @ weights, 'x') + bias)\n",
+        "\n",
+        "layer_sharded(x, weights, bias)"
+      ],
+      "metadata": {
+        "id": "_eLS8ZMwvra7",
+        "outputId": "6811a432-4892-4f6f-c784-a79529612463",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Array([0.02138916, 0.8931118 , 0.5989196 , 0.9774251 ], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "BHVjs5aCqjEg"
+        "id": "7wtuPZ4vxhI7"
       },
       "execution_count": null,
       "outputs": []
